--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -585,4 +585,16 @@
         <item>@string/static_header_provider</item>
         <item>@string/file_header_provider</item>
     </string-array>
+
+    <string-array name="lockscreen_clock_align_entries" translatable="false">
+        <item>@string/lockscreen_clock_align0</item>
+        <item>@string/lockscreen_clock_align1</item>
+        <item>@string/lockscreen_clock_align2</item>
+    </string-array>
+
+    <string-array name="lockscreen_clock_align_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
