--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -535,6 +535,17 @@
         <item>8</item>
     </string-array>
 
+    <!-- Weather -->
+    <string-array name="weather_unit_entries" translatable="false">
+        <item>@string/weather_unit_metric</item>
+        <item>@string/weather_unit_imperial</item>
+    </string-array>
+
+    <string-array name="weather_unit_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
    <!-- Pie and Oreo recents -->
     <string-array name="recents_component_type_title_entries">
         <item>@string/recents_pie</item>
@@ -681,4 +692,6 @@
         <item>12000</item>
         <item>16000</item>
     </string-array>
+</resources>
+
 </resources>
